--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class = "base-header">
 			<div id = "logo-wrap">
-				<div onclick="window.location ='/blog/'" id="logo-content" >
+				<div onclick="window.location ='/blog/main/'" id="logo-content" >
 				<div id="logo"></div>
 				<div id="sign"><p>Блог</p></div>
 				</div>
